--- a/pa2/index.html
+++ b/pa2/index.html
@@ -6,7 +6,7 @@
 
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/bootstrap-theme.css" rel="stylesheet">
-	<link href="css/test.css" rel="stylesheet">
+	<link href="css/index.css" rel="stylesheet">
 
 </head>
 
@@ -28,7 +28,6 @@
   	<script src="js/jquery.js"></script>
   	<script src="js/bootstrap.js"></script>
   	<script src="js/index.js"></script>
-
 	<!-- End Scripts -->
 </body>
 
