--- a/pa2/index.html
+++ b/pa2/index.html
@@ -14,6 +14,10 @@
 	<div class="blur">
 	</div>
 
+	<div class="title" style="font-family: Apple Chancery, Baskerville; top:50px">
+		<p>Ethan Myers</p>
+	</div>
+
 	<div class="content">
 		<div class="icon"><a></a></div>
 		<div class="icon"><a></a></div>
